--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\The Minecraft Geek\\AppData\\Local\\Programs\\Python\\Python36\\python.exe",
+    "python.pythonPath": "C:\\Users\\wdcook4\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe",
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true
 }
